<resources>
    <string name="app_name">MiNavegador</string>
    <string name="action_settings">Settings</string>
    <string name="action_close_tab">X</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_exit">Exit</string>
    <string name="action_show_tabs">[0]</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
</resources>
